src/np222kk/dv507/a2/test/cases/negative/test_methodarray_01.ofp
void main() {

    int i = integer()[0];
}

int integer() {
    return 1;
}